<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:title="@string/night_mode"
        android:id="@+id/night_switch_drawer"
        app:actionViewClass="android.widget.Switch"
        app:showAsAction="ifRoom"/>

    <item
        android:title="@string/language"
        android:id="@+id/navigation_drawer_language"
        app:actionViewClass="android.widget.ImageView"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/english_language_selection"
                android:title="@string/english"
                android:icon="@drawable/uk_flag"/>
            <item
                android:id="@+id/latvian_language_selection"
                android:title="@string/latvie_u"
                android:icon="@drawable/lv_flag" />
        </menu>
    </item>
</menu>